Adjusting grid to % over em

--- a/css/typography.less
+++ b/css/typography.less
@@ -1,3 +1,36 @@
-h1 {
+html {
+	font-size: 62.5%;
+}
+
+h1, h2, h3, h4, h5, h6, p {
 	color: @color-black;
+	margin: 0em 0em 1em 0em;
+	padding: 0em 0em 0em 0em;
+}
+
+h1 {
+	font-size: 32px; /* IE 7-8 Hack */
+	font-size: 3.2rem;
+}
+
+h2 {
+	font-size: 24px;
+	font-size: 2.4rem;
+}
+
+h3 {
+	font-size: 16px;
+	font-size: 1.6rem;
+}
+
+h4, h5, h6 {
+	color: @color-gray;
+	font-size: 16px;
+	font-size: 1.6rem;
+}
+
+p {
+	font-size: 16px;
+	font-size: 1.6rem;
+	line-height: 2.0rem;
 }
