--- a/css/grid.less
+++ b/css/grid.less
@@ -1,7 +1,7 @@
 html {
 	margin: 0em 0em 0em 0em;
 	padding: 1em 0em 0em 0em;
-	font-family: "Andale Mono", AndaleMono, monospace;
+	font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 	background-color: @color-gray;
 	color: @color-black;
 }
@@ -18,7 +18,7 @@ div#container {
 }
 
 div.centered {
-	width: 64em;
+	width: 1024px;
 	margin: 0em auto 0em auto;
 }
 
@@ -45,74 +45,74 @@ div.row {
 .column14,
 .column15,
 .column16 {
-	margin: 0em 0.5em 0em 0.5em;
+	margin: 0em 0.78125% 0em 0.78125%;
 	padding: 0em 0em 0em 0em;
 	float: left;
-	background-color: rgba(255, 0, 255, 0.2);
+	background-color: rgba(255, 0, 255, 0.05);
 }
 
 .column1 {
-	width: 3em;
+	width: 4.68750%;
 }
 
 .column2 {
-	width: 7em;
+	width: 10.93750%;
 }
 
 .column3 {
-	width: 3em;
+	width: 17.18750%;
 }
 
 .column4 {
-	width: 15em;
+	width: 23.43750%;
 }
 
 .column5 {
-	width: 19em;
+	width: 29.68750%;
 }
 
 .column6 {
-	width: 23em;
+	width: 35.93750%;
 }
 
 .column7 {
-	width: 27em;
+	width: 42.18750%;
 }
 
 .column8 {
-	width: 31em;
+	width: 48.43750%;
 }
 
 .column9 {
-	width: 31em;
+	width: 54.68750%;
 }
 
 .column10 {
-	width: 31em;
+	width: 60.93750%;
 }
 
 .column11 {
-	width: 31em;
+	width: 67.18750%;
 }
 
 .column12 {
-	width: 31em;
+	width: 73.43750%;
 }
 
 .column13 {
-	width: 31em;
+	width: 79.68750%;
 }
 
 .column14 {
-	width: 31em;
+	width: 85.93750%;
 }
 
 .column15 {
-	width: 31em;
+	width: 92.18750%;
 }
 
 .column16 {
-	width: 31em;
+	width: 98.4375%;
 }
 
 /* span classes */
