Added support for placeholders in IE 8 and 9

--- a/css/grid.less
+++ b/css/grid.less
@@ -1,9 +1,9 @@
 html {
 	margin: 0em 0em 0em 0em;
 	padding: 1em 0em 0em 0em;
-	font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-	background-color: @color-gray;
-	color: @color-black;
+	font-family: sans-serif;
+	/*background-color: @color-gray;*/
+	/*color: @color-black;*/
 }
 
 body {
@@ -14,7 +14,7 @@ body {
 div#container {
 	margin: 0em 0em 0em 0em;
 	padding: 0em 0em 0em 0em;
-	background-color: @color-white;
+	/*background-color: @color-white;*/
 }
 
 div.centered {
@@ -48,6 +48,7 @@ div.row {
 	margin: 0em 0.78125% 0em 0.78125%;
 	padding: 0em 0em 0em 0em;
 	float: left;
+	background-color: #ccc;
 	background-color: rgba(255, 0, 255, 0.05);
 }
 
@@ -272,4 +273,3 @@ div.row {
 .padding-bottom-six {
 	padding-bottom: 6em !important;
 }
-
