--- a/css/variables.less
+++ b/css/variables.less
@@ -1,4 +1,7 @@
-@color-white: #fff;
-@color-gray: #dcdde0;
-@color-black: #727781;
-@color-green: #0f0;
+@color-white: #FFFFFF;
+@color-gray: #949A90;
+@color-black: #4B4F54;
+@color-gray-light: lighten(@color-gray, 40%);
+@color-green: #B6CFAE;
+@color-blue: #6BA4B8;
+@color-blue-dark: #003D4C;
