Added Symbolset and navigation styling

--- a/css/typography.less
+++ b/css/typography.less
@@ -1,6 +1,6 @@
 html {
 	font-size: 62.5%;
-	/*background-image: url('../images/baseline-22.png');*/
+	background-image: url('../images/baseline-25.png');
 }
 
 body {
@@ -13,8 +13,8 @@ body {
 
 h1, h2, h3, h4, h5, h6, p {
 	color: @color-black;
-	margin: 0px 0px 16px 0px;
-	margin: 0rem 0rem 1.6rem 0rem;
+	margin: 0px 0px 17px 0px;
+	margin: 0rem 0rem 1.7rem 0rem;
 	padding: 0px 0px 0px 0px;
 	padding: 0rem 0rem 0rem 0rem;
 }
@@ -65,8 +65,8 @@ h3 {
 }
 
 h4, h5, p, blockquote {
-	padding-top: 6px;
-	padding-top: 0.6rem;
+	padding-top: 8px;
+	padding-top: 0.8rem;
 	font-size: 16px;
 	font-size: 1.6rem;
 	line-height: 25px;
