--- a/css/navigation.less
+++ b/css/navigation.less
@@ -119,7 +119,7 @@ button.btn-lg {
 	display: block;
 }
 
-ul#menu-social {
+ul#social {
 	padding-top: 4px;
 	padding-top: 0.4rem;
 	
@@ -146,7 +146,7 @@ ul#menu-social {
 	}
 }
 
-ul#menu-primary {
+ul#primary {
 	padding-top: 8px;
 	padding-top: 0.8rem;
 	overflow: auto;
