--- a/css/typography.less
+++ b/css/typography.less
@@ -1,6 +1,6 @@
 html {
 	font-size: 62.5%;
-	background-image: url('../images/baseline-25.png');
+	/*background-image: url('../images/baseline-25.png');*/
 }
 
 body {
