--- a/css/typography.less
+++ b/css/typography.less
@@ -1,6 +1,6 @@
 html {
 	font-size: 62.5%;
-	/*background-image: url('../images/baseline-25.png');*/
+	/*background-image: url('../images/baseline-24.png');*/
 }
 
 body {
@@ -11,99 +11,106 @@ body {
 	font-weight: 300;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h2, h3, h4, h5, h6, p {
 	color: @color-black;
-	margin: 0px 0px 17px 0px;
-	margin: 0rem 0rem 1.7rem 0rem;
+	margin: 0px 0px 24px 0px;
+	margin: 0rem 0rem 2.4rem 0rem;
 	padding: 0px 0px 0px 0px;
 	padding: 0rem 0rem 0rem 0rem;
-}
-h1 {
-	color: @color-black;
-	margin: 0px 0px 8px 0px;
-	margin: 0rem 0rem 0.8rem 0rem;
-	padding: 0px 0px 0px 0px;
-	padding: 0rem 0rem 0rem 0rem;
+	/*background-color: rgba(255, 0, 0, 0.5);*/
 }
 
 h1 {
-	padding-top: 14px;
-	padding-top: 1.4rem; /* 44 - 32 */
-	font-size: 30px; /* IE 7-8 Hack */
+	/*background-color: rgba(255, 0, 0, 0.25);*/
+	color: @color-gray;
+	margin: 0px 0px 24px 0px;
+	margin: 0rem 0rem 2.4rem 0rem;
+	padding: 16px 0px 8px 0px;
+	padding: 1.6rem 0rem 0.8rem 0rem;
+	font-size: 30px;
 	font-size: 3.0rem;
-	line-height: 44px;
-	line-height: 4.4rem;
-}
-
-h2 {
-	color: @color-black;
-	margin: 0px 0px 12px 0px;
-	margin: 0rem 0rem 1.2rem 0rem;
-	padding: 0px 0px 0px 0px;
-	padding: 0rem 0rem 0rem 0rem;
-}
-
-h2 {
-	padding-top: 18px;
-	padding-top: 1.8rem; /* 44 - 32 */
-	font-size: 22px;
-	font-size: 2.2rem;
-	line-height: 33px;
-	line-height: 3.3rem;
-}
-
-h3 {
-	color: @color-black;
-	margin: 0px 0px 10px 0px;
-	margin: 0rem 0rem 1.0rem 0rem;
-	padding: 0px 0px 0px 0px;
-	padding: 0rem 0rem 0rem 0rem;
-	font-size: 22px;
-	font-size: 2.2rem;
-	line-height: 33px;
-	line-height: 3.3rem;
-}
-
-h4, h5, p, blockquote {
-	padding-top: 8px;
-	padding-top: 0.8rem;
-	font-size: 16px;
-	font-size: 1.6rem;
-	line-height: 25px;
-	line-height: 2.5rem;
-}
-
-h6 {
-	padding-top: 8px;
-	padding-top: 0.8rem;
-	font-size: 12px;
-	font-size: 1.2rem;
-	line-height: 22px;
-	line-height: 2.2rem;
-	font-weight: 700;
+	line-height: 48px;
+	line-height: 4.8rem; /* 2 baselines */
 }
 
 h2 {
 	border-top: 0.3rem solid @color-black;
+	
+	/*background-color: rgba(0, 0, 255, 0.2);*/
+	color: @color-black;
+	padding: 21px 0px 12px 0px;
+	padding: 2.1rem 0rem 1.2rem 0rem;
+	font-size: 20px;
+	font-size: 2.0rem;
+	line-height: 36px; /* 24 x 3 = 72 / 2 = 36*/
+	line-height: 3.6rem;
 	font-weight: 700;
 }
 
+h3 {
+	color: @color-black;
+	/*margin: 0px 0px 10px 0px;*/
+	/*margin: 0rem 0rem 1.0rem 0rem;*/
+	padding: 0px 0px 12px 0px;
+	padding: 0rem 0rem 1.2rem 0rem;
+	font-size: 20px;
+	font-size: 2.0rem;
+	line-height: 36px;
+	line-height: 3.6rem;
+}
+
 h4, h5 {
+	/*background-color: rgba(0, 0, 255, 0.2);*/
+	padding: 8px 0px 16px 0px;
+	padding: 0.8rem 0rem 1.6rem 0rem;
 	font-family: "ff-sero-sc-web",sans-serif;
 	font-style: normal;
+	font-size: 16px;
+	font-size: 1.6rem;
+	line-height: 24px;
+	line-height: 2.4rem;
 	text-transform: lowercase;
 	letter-spacing: 0.2rem;
 }
 
 h4 {
 	font-weight: 700;
-	/*color: @color-gray-light;*/
 }
 
 h5 {
 	font-weight: 300;
-	/*color: @color-gray-light;*/
 }
+
+h6 {
+	padding: 8px 0px 16px 0px;
+	padding: 0.8rem 0rem 1.6rem 0rem;
+	/*font-family: "ff-sero-sc-web",sans-serif;*/
+	/*font-style: normal;*/
+	font-size: 12px;
+	font-size: 1.2rem;
+	line-height: 24px;
+	line-height: 2.4rem;
+	/*text-transform: lowercase;*/
+	/*letter-spacing: 0.2rem;*/
+	font-weight: 700;
+}
+
+p {
+	/*background-color: rgba(0, 0, 255, 0.2);*/
+	/*background-color: rgba(0, 0, 255, 0.1);*/
+	padding: 8px 0px 16px 0px;
+	padding: 0.8rem 0rem 1.6rem 0rem;
+	/*font-family: "ff-sero-sc-web",sans-serif;*/
+	/*font-style: normal;*/
+	font-size: 16px;
+	font-size: 1.6rem;
+	line-height: 24px;
+	line-height: 2.4rem;
+	/*text-transform: lowercase;*/
+	/*letter-spacing: 0.2rem;*/
+}
+
+
 
 blockquote {
   border-left: 0.3rem solid @color-gray;
