--- a/css/typography.less
+++ b/css/typography.less
@@ -13,8 +13,8 @@ body {
 
 h2, h3, h4, h5, h6, p {
 	color: @color-black;
-	margin: 0px 0px 24px 0px;
-	margin: 0rem 0rem 2.4rem 0rem;
+	/*margin: 0px 0px 24px 0px;*/
+	/*margin: 0rem 0rem 2.4rem 0rem;*/
 	padding: 0px 0px 0px 0px;
 	padding: 0rem 0rem 0rem 0rem;
 	/*background-color: rgba(255, 0, 0, 0.5);*/
