--- a/css/typography.less
+++ b/css/typography.less
@@ -1,6 +1,6 @@
 html {
 	font-size: 62.5%;
-	/*background-image: url('../images/baseline-24.png');*/
+	background-image: url('../images/baseline-24.png');
 }
 
 body {
@@ -102,12 +102,26 @@ p {
 	padding: 0.8rem 0rem 1.6rem 0rem;
 	/*font-family: "ff-sero-sc-web",sans-serif;*/
 	/*font-style: normal;*/
-	font-size: 16px;
-	font-size: 1.6rem;
+	font-size: 15px;
+	font-size: 1.5rem;
 	line-height: 24px;
 	line-height: 2.4rem;
 	/*text-transform: lowercase;*/
 	/*letter-spacing: 0.2rem;*/
+}
+
+span.small-caps {
+	/*background-color: rgba(0, 0, 255, 0.2);*/
+	/*padding: 8px 0px 16px 0px;*/
+	/*padding: 0.8rem 0rem 1.6rem 0rem;*/
+	font-family: "ff-sero-sc-web",sans-serif;
+	font-style: normal;
+	/*font-size: 16px;*/
+	/*font-size: 1.6rem;*/
+	/*line-height: 24px;*/
+	/*line-height: 2.4rem;*/
+	text-transform: lowercase;
+	letter-spacing: 0.2rem;
 }
 
 
