--- a/css/grid.less
+++ b/css/grid.less
@@ -409,7 +409,7 @@ div.row {
 
 @media only screen and (max-width: 640px) {
 	html {
-		background-color: @color-white;
+		background-color: #fff;
 	}
 	div.centered {
 		width: 100%;
@@ -439,7 +439,7 @@ div.row {
 
 @media only screen and (min-width: 641px) and (max-width: 1024px) {
 	html {
-		background-color: @color-white;
+		background-color: #fff;
 	}
 	div.centered {
 	width: 75%;
@@ -449,7 +449,7 @@ div.row {
 
 @media only screen and (min-width: 1025px) {
 	html {
-		background-color: @color-white;
+		background-color: #fff;
 	}
 	div.centered {
 	width: 75%;
