--- a/includes/navigation.html
+++ b/includes/navigation.html
@@ -1,9 +1,10 @@
-<h2>Navigation</h2>
+<h2>Components</h2>
 <ul>
 	<li><a href="/infra/">Home</a></li>
+	<li><a href="/infra/buttons/">Buttons</a></li>
 	<li><a href="/infra/forms/">Forms</a></li>
 	<li><a href="/infra/grid/">Grid</a></li>
 	<li><a href="/infra/iconography/">Iconography</a></li>
-	<li><a href="/infra/navigation/">Navigation</a></li>
+	<li><a href="/infra/tables/">Tables</a></li>
 	<li><a href="/infra/typography/">Typograhy</a></li>
 </ul>
