Typographic refinements to <a> and <ul> tags

--- a/css/typography.less
+++ b/css/typography.less
@@ -2,7 +2,7 @@
 
 html {
 	font-size: 62.5%;
-	background-image: url('../includes/images/baseline-24.png');
+	/*background-image: url('../includes/images/baseline-24.png');*/
 }
 
 body {
@@ -36,7 +36,7 @@ h1 {
 }
 
 h2 {
-	border-top: 0.1rem solid @color-black;
+	border-top: 0.1rem solid fade(@color-black, 25%);
 	
 	/*background-color: rgba(0, 0, 255, 0.2);*/
 	color: @color-black;
