--- a/css/navigation.less
+++ b/css/navigation.less
@@ -2,11 +2,11 @@
 
 a {
 	/*padding-bottom: 0.1rem;*/
-	border-bottom: 0.1rem solid fade(@color-black, 50%);
+	border-bottom: 0.1rem solid fade(@color-black, 25%);
 	color: @color-black;
 	text-decoration: none;
-	font-size: 16px;
-	font-size: 1.6rem;
+	font-size: 15px;
+	font-size: 1.5rem;
 	line-height: 24px;
 	line-height: 2.4rem;
 	-webkit-transition: all 0.5s; /* For Safari 3.1 to 6.0 */
@@ -16,8 +16,8 @@ a {
 a:hover {
 	border-bottom: 0.1rem solid saturate(@color-blue, 20%);
 	color: saturate(@color-blue, 20%);
-	-webkit-transition: all 0.5s; /* For Safari 3.1 to 6.0 */
-	transition: all 0.5s;
+	-webkit-transition: all 0.25s; /* For Safari 3.1 to 6.0 */
+	transition: all 0.25s;
 }
 
 a.lnk-primary {
@@ -178,5 +178,31 @@ ul#primary {
 		a {
 			border-bottom: none;
 		}
+	}
+}
+
+ul {
+	display: block;
+	/*padding-top: 2px;*/
+	/*padding-top: 0.2rem;*/
+	padding: 8px 0px 16px 0px;
+	padding: 0.8rem 0rem 1.6rem 0rem;
+
+	overflow: auto;
+	/*height: 42px;*/
+	/*height: 4.2rem;*/
+	/*background-color: rgba(0, 255, 0, 0.5);*/
+	
+	li {
+		display: block;
+		/*float: left;*/
+		margin-right: 16px;
+		margin-right: 1.6rem;
+
+		a {
+			line-height: 24px;
+			line-height: 2.4rem;
+		}
+
 	}
 }
