--- a/css/typography.less
+++ b/css/typography.less
@@ -2,7 +2,7 @@
 
 html {
 	font-size: 62.5%;
-	/*background-image: url('../includes/images/baseline-24.png');*/
+	background-image: url('../includes/images/baseline-24.png');
 }
 
 body {
