--- a/css/navigation.less
+++ b/css/navigation.less
@@ -2,7 +2,7 @@
 
 a {
 	/*padding-bottom: 0.1rem;*/
-	border-bottom: 0.1rem solid fade(@color-black, 25%);
+	border-bottom: 0.1rem solid @color-gray-light;
 	color: @color-black;
 	text-decoration: none;
 	font-size: 15px;
