Add <small> <a> CSS rule

--- a/css/navigation.less
+++ b/css/navigation.less
@@ -206,3 +206,16 @@ ul {
 
 	}
 }
+
+small a {
+	/*padding-bottom: 0.1rem;*/
+	border-bottom: none;
+	color: @color-gray-light;
+	text-decoration: none;
+	font-size: 15px;
+	font-size: 1.5rem;
+	line-height: 24px;
+	line-height: 2.4rem;
+	-webkit-transition: all 0.5s; /* For Safari 3.1 to 6.0 */
+	transition: all 0.5s;
+}
